# airgapped-rpm-repo

./: .editorconfig  .gitignore  .shellcheckrc  .yamllint.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.bak  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  rpmserverctl
.github/workflows/: ci.yml  release.yml  security.yml
airgapped-deps/: README.md  install-deps.ps1
airgapped-deps/checksums/: sha256.txt  verify.ps1
airgapped-deps/isos/: ks-external.cfg  ks-internal.cfg
ansible/: ansible.cfg
ansible/artifacts/: .gitkeep
ansible/inventories/: e2e_hosts.yml  e2e_hosts.yml.bak  hosts.yml  lab.yml  lab.yml.bak
ansible/playbooks/: bootstrap_ssh_keys.yml  collect_manifests.yml  configure_capsule_repos.yml  configure_internal_repo.yml  onboard_hosts.yml  patch_monthly_security.yml  replace_repo_tls_cert.yml  site.yml  stig_harden_internal_vm.yml
automation/: MANUAL_TOUCHPOINTS.md
automation/kickstart/: rhel96_external.ks  rhel96_external.ks.bak  rhel96_internal.ks  rhel96_internal.ks.bak
automation/powercli/: Read-SpecConfig.ps1  build-ovas.ps1  deploy-rpm-servers.ps1  destroy-rpm-servers.ps1  discover-vsphere-defaults.ps1  generate-ks-iso.ps1  upload-isos.ps1  validate-spec.ps1  wait-for-dhcp-and-report.ps1  wait-for-install-complete.ps1
automation/scripts/: render-inventory.py  run-e2e-tests.sh  validate-operator-guide.sh  validate-spec.sh
automation/vmware/: README.md
compliance/arf/: .gitkeep
compliance/ckl/: .gitkeep
compliance/html/: .gitkeep
compliance/profiles/: rhel9-stig.xml
compliance/xccdf/: .gitkeep
config/: spec.yaml
containers/ansible-ee/: Containerfile  ansible.cfg
containers/rpm-publisher/: Containerfile  httpd-repos.conf
deployment/: run-ansible.sh  setup-rpmops-user.sh
deployment/systemd/: README.md  airgap-ansible-control.service  (+1 more)
docs/: administration_guide.md  architecture.md  deployment_artifacts.md  deployment_guide.md  external_workflow.md  internal_architecture.md  internal_workflow.md  minimal_ssp.md  nist_80053_mapping.md  operations.md  operator_guide.md  operator_guide_automated.md  operator_guide_automated.md.bak  operator_quickstart_windows11.md  security_boundary.md  setup_external_builder.md  setup_internal_vmware_ovf.md  ssp_80053.md  stig_hardening_internal.md  threat_model.md  troubleshooting.md  vmware_deploy_internal.md
kickstart/: ks-capsule.cfg  ks-rhel8-host.cfg  ks-rhel9-host.cfg  ks-rpm-external.cfg  ks-rpm-internal.cfg  ks-satellite.cfg
packer/: rhel9-internal.pkr.hcl  variables.pkrvars.hcl.example
scripts/: build-airgapped-deps.ps1  e2e-proof-simple.sh  e2e-satellite-proof.ps1  e2e_test.sh  e2e_test.sh.bak  generate_ckl.sh  host_collect_manifest.sh  internal_e2e_test.sh  internal_e2e_test.sh.bak  operator.ps1  run_openscap.sh
src/: __init__.py
tests/: __init__.py
(+131 files in other folders)
